--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -15,7 +15,8 @@
       <ul class="user-nav-list">
         <li>{{link 'community'}}</li>
         <li>{{link 'service_catalog'}}</li>
-        <li>{{link 'new_request' class='submit-a-request'}}</li>
+        <!--<li>{{link 'new_request' class='submit-a-request'}}</li>-->
+        <li><a href="/hc/{{current_locale.locale}}/p/new_request_custom" class="submit-a-request">{{t 'submit_a_request'}}</a></li>
         {{#unless signed_in}}
           <li>
             {{#link "sign_in" class="sign-in"}}
