--- a/templates/custom_pages/new_request_custom.hbs
+++ b/templates/custom_pages/new_request_custom.hbs
@@ -16,10 +16,9 @@
 
   <div id="main-content" class="form">
 
-
   <div class="request-blocks-grid">
     <a href="/hc/requests/new?ticket_form_id=15389492342802" class="request-block">
-      <i class="fas fa-building-columns request-block-icon" aria-hidden="true"></i>
+      <i class="fas fa-university request-block-icon" aria-hidden="true"></i>
       <div class="request-block-content">
         <h3 class="request-block-title">{{dc 'nrc_servicios_institucionales_titulo'}}</h3>
         <p class="request-block-description">{{dc 'nrc_servicios_institucionales_descripcion'}}</p>
@@ -35,7 +34,7 @@
     </a>
 
     <a href="/hc/requests/new?ticket_form_id=14949679504402" class="request-block">
-      <i class="fas fa-euro request-block-icon" aria-hidden="true"></i>
+      <i class="fas fa-euro-sign request-block-icon" aria-hidden="true"></i>
       <div class="request-block-content">
         <h3 class="request-block-title">{{dc 'nrc_gestion_economica_titulo'}}</h3>
         <p class="request-block-description">{{dc 'nrc_gestion_economica_descripcion'}}</p>
@@ -67,7 +66,7 @@
     </a>
 
     <a href="/hc/requests/new?ticket_form_id=14978422167698" class="request-block">
-      <i class="fas fa-screwdriver-wrench request-block-icon" aria-hidden="true"></i>
+      <i class="fas fa-tools request-block-icon" aria-hidden="true"></i>
       <div class="request-block-content">
         <h3 class="request-block-title">{{dc 'nrc_gestion_ogi_titulo'}}</h3>
         <p class="request-block-description">{{dc 'nrc_gestion_ogi_descripcion'}}</p>
@@ -83,7 +82,7 @@
     </a>
 
     <a href="/hc/requests/new?ticket_form_id=15247568191634" class="request-block">
-      <i class="fas fa-building-user request-block-icon" aria-hidden="true"></i>
+      <i class="fas fa-building request-block-icon" aria-hidden="true"></i>
       <div class="request-block-content">
         <h3 class="request-block-title">{{dc 'nrc_servicios_generales_titulo'}}</h3>
         <p class="request-block-description">{{dc 'nrc_servicios_generales_descripcion'}}</p>
