--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -24,7 +24,7 @@
           {{#if ../has_multiple_categories}}
             <li class="blocks-item">
               <a href='{{url}}' class="blocks-item-link">
-                <span class="blocks-item-title">{{name}}</span>
+                <h3 class="blocks-item-title">{{name}}</h3>
                 <span class="blocks-item-description">{{excerpt description}}</span>
               </a>
             </li>
@@ -32,9 +32,9 @@
             {{#each sections}}
               <li class="blocks-item">
                 <a href='{{url}}' class="blocks-item-link">
-                  <span class="blocks-item-title">
+                  <h3 class="blocks-item-title">
                     {{name}}
-                  </span>
+                  </h3>
                   <span class="blocks-item-description">{{excerpt description}}</span>
                 </a>
               </li>
