--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -47,7 +47,8 @@
 
     {{#if promoted_articles}}
       <section class="articles">
-        <h2>{{t 'promoted_articles'}}</h2>
+        <h2>Artículos Destacados</h2>
+        <h2 class="visibility-hidden">{{t 'promoted_articles'}}</h2>
         <ul class="article-list promoted-articles">
           {{#each promoted_articles}}
             <li class="promoted-articles-item">
